--- a/docs/apache-felix.tex
+++ b/docs/apache-felix.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 	\subsection{OSGi}
-	OSGi (Open Services Gateway initiative) is een framework dat ons in staat stelt om Java applicaties uit verschillende componenten op te bouwen. Deze componenten worden bundels genoemd die onafhankelijk van elkaar geïnstalleerd, verwijdert en vervangen kunnen worden in een OSGi container. Een bundel bestaat uit de jars en resources nodig voor de interne werking van deze bundel. Tijdens het bundelen kan er gespecificeerd worden welke packages zichtbaar zijn voor de andere bundels, als we niets configureren zal geen enkele package publiek beschikbaar zijn. Dit is in contrast met de normale werking van jars waar elke jar op het classpath aan alle klassen kan. Wanneer we een bundel installeren (of verwijderen) hoeven we de container niet stop te zetten. Dit geeft dat er geen down time is tijdens het updaten van onze applicatie.
+	OSGi (Open Services Gateway initiative) is een framework dat ons in staat stelt om Java applicaties uit verschillende modules op te bouwen. Deze modules worden bundels genoemd die onafhankelijk van elkaar geïnstalleerd, verwijdert en vervangen kunnen worden in een OSGi container. Een bundel bestaat uit de jars en resources nodig voor de interne werking van deze bundel. Tijdens het bundelen kan er gespecificeerd worden welke packages zichtbaar zijn voor de andere bundels, als we niets configureren zal geen enkele package publiek beschikbaar zijn. Dit is in contrast met de normale werking van jars waar elke jar op het classpath aan alle (publieke) klassen kan. Wanneer we een bundel installeren (of verwijderen) hoeven we de container niet stop te zetten. Dit geeft dat er geen down time is tijdens het updaten van onze applicatie.
 	\par
 	Omdat de bundels onafhankelijk van elkaar geïnstalleerd worden, kan een bundel niet rechtstreeks rekenen op klassen voorzien door een andere bundel. Indien bundels toch afhankelijk zijn van elkaar worden er interfaces voorzien die geregistreerd worden in een service laag. Stel dat bundel A een externe StoreService gebruikt om een winkel te kunnen ophalen, zolang deze interface geregistreerd is in de service laag kan onze bundel starten zonder probleem. Wanneer bundel B start met een implementatie van StoreService (bv. StoreServiceImpl), kunnen we deze registreren in de service laag. Bundel A luistert naar veranderingen in de service laag en zodra StoreServiceImpl beschikbaar is, zal deze in gebruik genomen worden. In het geval dat bundel B verwijdert word, zal deze ongeregistreerd worden en zal bundel A hiervan op de hoogte zijn.
 	\subsection{Apache Felix}
