--- a/docs/crx.tex
+++ b/docs/crx.tex
@@ -2,10 +2,11 @@
 \documentclass{article}
 
 \begin{document}
-	\subsection{CRX}
-	Nu we de open source onderdelen van AEM hebben gezien is het tijd om de gelicentieerde delen bespreken. Het eerste dat we bespreken is Adobe CRX wat, simpelweg gezegd, Adobes implementatie is van Apache Jackrabbit en Slin. Buiten alle features die deze frameworks bieden heeft Adobe bijkomende functionaliteit toegevoegd, anders zou het maar raar zijn om hiervoor te betalen. We bekijken kort diegene die we gebruiken tijdens 
+	\subsection{Author}
+	\subsubsection{CRX}
+	Nu we de open source onderdelen van AEM hebben gezien is het tijd om de gelicentieerde delen bespreken. Het eerste dat we bespreken is Adobe CRX wat, simpelweg gezegd, Adobes implementatie is van Apache Jackrabbit en Sling. Buiten alle features die deze frameworks bieden heeft Adobe bijkomende functionaliteit toegevoegd, anders zou het maar raar zijn om hiervoor te betalen. We bekijken kort diegene die we gebruiken tijdens dit project.
 	\par
-	Zoals we reeds gezien hebben is de datastructuur van JCR een boom waarin we kunnen navigeren. Een feature die CRX voorziet is een UI waarmee we kunnen navigeren door onze nodes, de CRXDE. Met deze interface kunnen we onze nodes bekijken zoals we een filesystem zouden gebruiken. We kunnen nodes expanderen en hun kinderen bekijken om ook deze te expanderen en zo dieper in onze boom af te dalen, of we kunnen de properties van de node zelf bekijken. De kracht van deze UI is dat we snel een gestructureerd overzicht van de nodes die onze website vormgeven.
+	Zoals we reeds gezien hebben is de datastructuur van JCR een boom waarin we kunnen navigeren. Een feature die CRX voorziet is een UI waarmee we kunnen navigeren door onze nodes, de CRXDE. Met deze interface kunnen we onze nodes bekijken zoals we een filesystem zouden gebruiken. We kunnen nodes expanderen en hun kinderen bekijken om ook deze te expanderen en zo dieper in onze boom af te dalen, of we kunnen de properties van de node zelf bekijken. De kracht van deze UI is dat we een gestructureerd overzicht van de nodes zien die onze website vormgeven.
 	\par
-	De package manager is een ander belangrijk onderdeel van de CRX en geeft ons de optie om onze OSGi bundels via een interface te managen. Met deze interface kunnen we bundels aan onze applicatie toevoegen of bestaande bundels verwijderen. Buiten beheren welke bundels geïnstalleerd zijn kunnen we deze ook starten en stoppen vanuit de package manager. Dit versimpelt de manier waarop we onze applicatie beheren en is dus van grote toegevoegde waarden voor de ontwikkelaars.
+	De package manager is een ander belangrijk onderdeel van de CRX en geeft ons de optie om onze OSGi bundels via een interface te managen. Met deze interface kunnen we bundels aan onze applicatie toevoegen of bestaande bundels verwijderen. Buiten beheren welke bundels geïnstalleerd zijn kunnen we deze ook starten en stoppen vanuit de package manager. Moest er een bundel niet starten, kunnen we deze opzoeken in de package manager en krijgen we de reden hiervoor te zien. Dit versimpelt de manier waarop we onze applicatie beheren en is dus van grote toegevoegde waarden voor de ontwikkelaars.
 \end{document}
