--- a/docs/aem-architectuur.tex
+++ b/docs/aem-architectuur.tex
@@ -3,6 +3,6 @@
 
 \begin{document}
 	\section{Architectuur van AEM}
-	In dit hoofdstuk gaan we de bouwstenen van AEM bekijken, de frameworks die worden gebruikt om de geboden functionaliteit mogelijk te maken en de interfaces die we ter beschikking krijgen om onze applicatie te beheren. De reden dat we dit doen is omdat deze ingebakken zijn in AEM, wie met AEM aan de slag gaat, zal ongetwijfeld met deze technologieën te maken krijgen. Het is aan te raden eerst deze sectie te lezen om een beter begrip te krijgen wat we doen en waarom dit doen tijdens de ontwikkeling van componenten en controllers. We beginnen bij de open source, en dus gratis, bestanddelen en bekijken vervolgens waarvoor we betalen.
+	In dit hoofdstuk gaan we de bouwstenen van AEM bekijken, de frameworks die worden gebruikt om de geboden functionaliteit mogelijk te maken en de interfaces die we ter beschikking krijgen om onze applicatie te beheren. De reden dat we dit doen is omdat deze ingebakken zijn in AEM, wie met AEM aan de slag gaat, zal ongetwijfeld met deze technologieën te maken krijgen. Het is aan te raden eerst deze sectie te lezen om een beter begrip te krijgen wat we doen en waarom we dit doen. We beginnen bij het open-source gedeelte en bekijken vervolgens waarvoor we betalen.
 
 \end{document}
