--- a/docs/bachelorproef.tex
+++ b/docs/bachelorproef.tex
@@ -8,6 +8,9 @@
 \usepackage{listings}
 \usepackage{wrapfig}
 
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 \title{Adobe Experience Manager}
 \author{Mike Heymans}
 \date{2017}
