--- a/docs/scheduler.tex
+++ b/docs/scheduler.tex
@@ -13,5 +13,5 @@
 	\par
 	Onze installatie is voorzien van enkele standaard jobs maar het is mogelijk om via de Java api zelf jobs te coderen. De api voorziet de interface InterruptableJob die een klasse dwingt om de execute methode te implementeren, deze heeft een JobContext als parameter. Obsidian scant de lib folder van Tomcat en pikt de klassen die deze interface implementeren op als jobs. Om vanuit de UI parameters te kunnen meegeven moeten we onze klasse ook voorzien met de Configuration annotatie waarin we array van @Parameter aan meegeven. Elke parameter geven we een naam, een type, of deze vereist is en een eventuele default waarde. Tijdens het runnen van onze job kan je de parameterwaarde uit de JobContext halen.
 	\par
-	Voor dit project maken we twee jobs aan, \'e\'en die alle categorieën ophaalt en doorstuurt naar AEM en eentje die enkel de gewijzigde categorieën ophaalt. Beide jobs hebben twee stappen waarvan de eerste het ophalen van de categorieën is. De eerste job doet dit zonder parameter en krijgt alle categorieën binnen, de tweede doet dit met een datum en krijgt enkele de categorieën die na deze datum gewijzigd zijn binnen. De volgende stap is identiek voor de jobs, itereren over de categorieën en deze \'e\'en voor \'e\'en doorsturen naar AEM, dit zal het pagina generatie proces starten.
+	Voor dit project maken we twee jobs aan, \'e\'en die alle categorie\"en ophaalt en doorstuurt naar AEM en eentje die enkel de gewijzigde categorie\"en ophaalt. Beide jobs hebben twee stappen waarvan de eerste het ophalen van de categorie\"en is. De eerste job doet dit zonder parameter en krijgt alles binnen, de tweede doet dit met een datum en krijgt enkele die gewijzigd zijn na deze datum binnen. De volgende stap is identiek voor de jobs, itereren over de opgehaalde categorieën en deze \'e\'en voor \'e\'en doorsturen naar AEM, dit zal het pagina generatie proces starten.
 \end{document}
