--- a/docs/pagina-genereren.tex
+++ b/docs/pagina-genereren.tex
@@ -10,7 +10,7 @@
 	\par
 	Om een node aan te maken moeten we eerst een Session verkrijgen waarin we kunnen werken, dit kunnen we doen door de login methode op onze SlingRepository aan te roepen met onze credentials. JcrUtils is een voorziene klasse waarmee we noden kunnen aanmaken, hetgeen we nodig hebben is een pad waaronder we deze willen opslaan, het type dat we aan de node willen toekennen en onze reeds verkregen sessie. Als we de node hebben aangemaakt rest ons nog het over mappen van de velden naar onze noden, indien ons model velden bevat die een klasse op zich zijn, moeten we met geneste noden werken. Dit nesten heeft geen beperkingen en kan zo diep als nodig gaan. Het is aan te raden om deze velden te voorzien met een prefix om een duidelijk onderscheid te maken dus de properties die we zelf creëeren en diegene die door JCR aangemaakt zijn. Stel dat we een veld 'title' hebben die we wensen op te slaan, doen we dit onder '<custom-tag>:title'. Wanneer de velden zijn overgezet mogen we niet vergeten om de save methode van onze sessie aan te roepen zodat onze data gepersisteerd wordt.
 	\par
-	De volgende stap is een pagina voor ons model aanmaken, dit per taal waarin onze website beschikbaar is. Een pagina aanmaken gebeurt op een gelijkaardige manier als een node. We gebruiken de PageManager die de AEM api ons beschikbaar stelt. Omdat we zaken gaan persisteren moeten we ook hier werken met een sessie. Via de pageManager kunnen we onze root pagina van de website opvragen. De directe kinderen van deze pagina stellen de talen voor waarin onze site beschikbaar is. We itereren over deze lijst waarbij we per kind (lees taal) een pagina genereren. We maken deze pagina niet rechtstreeks onder de taalpagina aan maar voorzien een tussen pagina, bv. categoriëen. Wanneer we een categorie met id 14 hebben gaan we de pagina hiervoor opslaan onder <onze site>/nl/categorieen/14. Het pad dat we dan meegeven aan de create methode van de pageManager is het pad van de ouder waaronder we een pagina willen maken. Naast deze parameter geven we ook de pagina naam mee (in ons voorbeeld 14), de template (de locatie van de html die we gebruiken om onze pagina te tonen) en een modeltitel (bv. 'category'). Nu de pagina is aangemaakt kunnen we hiervan de node opvragen en kunnen we, conform aan vorige paragraaf, deze voorzien van properties. Ook hier prefixen we best onze namen.
+	De volgende stap is een pagina voor ons model aanmaken, dit per taal waarin onze website beschikbaar is. Een pagina aanmaken gebeurt op een gelijkaardige manier als een node. We gebruiken de PageManager die de AEM api ons beschikbaar stelt. Omdat we zaken gaan persisteren moeten we ook hier werken met een sessie. Via de pageManager kunnen we onze root pagina van de website opvragen. De directe kinderen van deze pagina stellen de talen voor waarin onze site beschikbaar is. We itereren over deze lijst waarbij we per kind (lees taal) een pagina genereren. We maken deze pagina niet rechtstreeks onder de taalpagina aan maar voorzien een tussen pagina, bv. categorie\"en. Wanneer we een categorie met id 14 hebben gaan we de pagina hiervoor opslaan onder <onze site>/nl/categorieen/14. Het pad dat we dan meegeven aan de create methode van de pageManager is het pad van de ouder waaronder we een pagina willen maken. Naast deze parameter geven we ook de pagina naam mee (in ons voorbeeld 14), de template (de locatie van de html die we gebruiken om onze pagina te tonen) en een modeltitel (bv. 'category'). Nu de pagina is aangemaakt kunnen we hiervan de node opvragen en kunnen we, conform aan vorige paragraaf, deze voorzien van properties. Ook hier prefixen we best onze namen.
     \par
     In vorige paragraaf gebruiken we een template om onze categorie te tonen, deze gaan we zelf voorzien. Het is best om hier gebruik te maken van het componenten systeem waarvoor AEM gekend is. In plaats van een specifieke html te coderen gaan we deze opslitsen in herbruikbare componenten. Hoe we componenten bouwen hebben we reeds gezien in een vorig hoofdstuk.
     \par
@@ -20,5 +20,5 @@
     \par
      Een bijkomend voordeel is dat, door het feit dat er een pagina aangemaakt is, we deze via de author kunnen bewerken. We maken weliswaar een pagina via een standaard template maar hier hoeft het niet bij te blijven. We kunnen deze via de author gaan editeren en van specifieke content zoals een achtergrond afbeelding, een paragraaf met extra informatie of een uitgelicht product voorzien. Pagina's genereren is de enigste manier van werken die dit mogelijk maakt.
 	\subsubsection{De nadelen}
-    Het grote nadeel van deze methode is dat dit een vrij intensieve operatie is en het genereren zelden beperkt is tot één enkele pagina, wanneer een site drie talen heeft zal AEM telkens drie pagina's aanmaken. Dit wordt nog eens geëxpandeerd indien men via een blueprint werkt. Stel dat we een .com site hebben met drie talen, een .be site met drie talen en een .nl site met twee talen. Dit betekent dat per categorie AEM zeven pagina's moeten voorzien. Voor een model waar relatief weinig wijzigingen aan gebeurt is dit doenbaar, zoals ons categorie voorbeeld. Maar als we dit willen doortrekken naar producten, waar er mogelijks duizenden per dag wijzigen, is dit niet houdbaar. Onze author zou continue belast worden met het genereren van pagina's en potentieel bezwijken onder de load. Een tweede author plaatsen is zelden een optie omdat dit een tweede licentie vereist.
+    Het grote nadeel van deze methode is dat dit een vrij intensieve operatie is en het genereren zelden beperkt is tot \'e\'en enkele pagina, wanneer een site drie talen heeft zal AEM telkens drie pagina's aanmaken. Dit wordt nog eens geëxpandeerd indien men via een blueprint werkt. Stel dat we een .com site hebben met drie talen, een .be site met drie talen en een .nl site met twee talen. Dit betekent dat per categorie AEM zeven pagina's moeten voorzien. Voor een model waar relatief weinig wijzigingen aan gebeurt is dit doenbaar, zoals ons categorie voorbeeld. Maar als we dit willen doortrekken naar producten, waar er mogelijks duizenden per dag wijzigen, is dit niet houdbaar. Onze author zou continue belast worden met het genereren van pagina's en potentieel bezwijken onder de load. Een tweede author plaatsen is zelden een optie omdat dit een tweede licentie vereist.
 \end{document}
